# ai-workstation

./: .gitignore  README.md  README_CN.md  pyproject.toml
config/: com.local.mlx-server-restart.plist  com.local.mlx-server.plist  kiss-translator-hooks.js  mlx  mlx-server-wrapper  models.conf  zshrc
