[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx==0.31.2",
    "mlx-lm==0.31.3",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "transformers>=5.7.0,<5.13.0",
    "socksio>=1.0.0",
]
